# Openenv_s

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_graders.json  tools.py  validator.bash
baseline/: __init__.py  baseline_agent.py
data/: scam_dataset.json
env/: __init__.py  models.py  reward.py  scam_env.py
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py  scam_grader.py
scripts/: eval_export.py  generate_dataset.py  hf_smoke_check.py  human_eval.py  merge_external_datasets.py  validate-submission.sh  validate_dataset.py  verify_task_graders.py
server/: app.py  openenv_types.py  scam_openenv_environment.py
tasks/: __init__.py  database.py  easy_task.py  grader_easy.py  grader_gray_boundary.py  grader_hard.py  grader_link_phishing_surface.py  grader_medium.py  grader_otp_kyc_pressure.py  grader_progressive_thread.py  grader_single_turn_triage.py  grader_verify_warn_chain.py  graders.py  hard_task.py  medium_task.py  task_registry.py  task_specs.py
tests/: __init__.py  test_task_graders.py  test_three_task_graders.py
